# gdb-cli

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  README.zh-CN.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/superpowers/specs/: 2026-04-04-multilanguage-support-design.md
mydocs/specs/: 2026-03-23_15-00_Async-Load-Optimization.md
skills/: README.md
skills/gdb-cli/: SKILL.md
skills/gdb-cli/evals/: evals.json
src/gdb_cli/: cli.py  i18n.py
src/gdb_cli/locales/: __init__.py  en.py  ru.py  zh_cn.py
tests/: test_handlers.py  test_i18n.py
