[build-system]
requires = ["setuptools>=40.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdb-cli"
version = "0.1.0"
description = "GDB CLI for AI - A thin client CLI with GDB built-in Python RPC Server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Cerdore", email = "cerdore@users.noreply.github.com"}
]
keywords = ["gdb", "debug", "cli", "ai", "coredump", "debugging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "click>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
gdb-cli = "gdb_cli.cli:main"

[project.urls]
Homepage = "https://github.com/Cerdore/gdb-cli"
Repository = "https://github.com/Cerdore/gdb-cli"
Issues = "https://github.com/Cerdore/gdb-cli/issues"
Documentation = "https://github.com/Cerdore/gdb-cli#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gdb_cli = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/gdb_cli"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["gdb_cli"]